# llmrl

./: README.md  benchmark.py  modal_utils.py  pyproject.toml  run_in_modal
examples/: gsm8k_grpo.py  simple_distilgpt2_ppo.py
llmrl/: dynamics.py  evals.py  loss.py  model_utils.py  models.py  rewards.py  search.py  structs.py  trainer.py
llmrl/examples/: gsm8k_grpo.py  gsm8k_muesli.py  modal_utils.py
llmrl/tests/: test_rewards.py
src/: algorithms.py  dynamics.py  evals.py  loss.py  model_utils.py  models.py  reward.py  rewards.py  search.py  structs.py  trainer.py
src/methods/: grpo_muesli.py
