[project]
name = "llmrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bitsandbytes>=0.45.3",
    "datasets>=3.4.0",
    "modal>=0.73.107",
    "peft>=0.14.0",
    "pytest>=8.3.5",
    "tomli>=2.2.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "wandb>=0.19.9",
]
